# eq-satrack

./: .gitignore  LICENSE  README.md  characterize.py  gui.py  pyproject.toml  requirements.txt  spectro_gui.py  track_pass.py
.github/workflows/: ci.yml
am5/: angles.py  cli.py  clock_sync.py  constants.py  constellations.py  ephemeris.py  live_input.py  logging_utils.py  mock_mount.py  mount.py  named_stars.py  optics.py  polar_alignment.py  protocol.py  safety.py  tracker.py  transport.py
am5/gui/: app.py  dialogs.py  finder_window.py  jog_window.py  panels.py  ser_player_window.py  theme.py  worker.py
assets/: bright_stars.LICENSE.txt  bright_stars.npz  iss_reference.LICENSE.txt
camera/: asi_camera.py  finder.py  fits_writer.py  guiding.py  mock_camera.py  platesolve.py  ser_reader.py  ser_writer.py  worker.py
docs/: AM5_UART_protocol_1.8.8.md
spectro/: alignment.py  avspec_export.py  catalog.py  pickles.py  reduction.py  session.py
spectro/gui/: app.py  jog_window.py  live_camera.py  panels.py
tests/: test_angles.py  test_camera_worker.py  test_characterize.py  test_clock_sync.py  test_constellations.py  test_ephemeris.py  test_finder.py  test_finder_window.py  test_fits_writer.py  test_gui_app.py  test_gui_dialogs.py  test_gui_panels.py  test_gui_ser_player.py  test_gui_worker.py  test_guiding.py  test_jog_window.py  test_live_input.py  test_mock_camera.py  test_mount.py  test_optics.py  test_platesolve.py  test_polar_alignment.py  test_protocol.py  test_ser_reader.py  test_ser_writer.py  test_spectro_panels.py  test_tracker.py
